[project]
name = "graphlora"
version = "0.1.0"
description = "Implementation of GraphLoRA: Structure-Aware Contrastive Low-Rank Adaptation for Cross-Graph Transfer Learning"
requires-python = ">=3.11.5"

dependencies = [
    "torch==2.1.0",
    "numpy==1.26.0",
    "torch-geometric==2.4.0",
    "pyyaml==6.0.1",
    "setuptools>=68.0.0",
    "packaging>=23.2",
]
