[project]
name = "graphlora"
version = "0.1.0"
description = "Implementation of GraphLoRA: Structure-Aware Contrastive Low-Rank Adaptation for Cross-Graph Transfer Learning"
requires-python = "~=3.11.5"

dependencies = [
    "numpy==1.26.0",
    "pyyaml==6.0.1",
    "setuptools>=68.0.0",
    "packaging>=23.2",
    "torch-geometric==2.4.0",
]

[project.optional-dependencies]
cpu = ["torch==2.1.0"]
gpuw = ["torch==2.1.0+cu121; sys_platform == 'win32'"]
gpul = ["torch==2.1.0+cu121; sys_platform == 'linux'"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpuw" },
        { extra = "gpul" },
    ],
]

[tool.uv.sources]
torch = [
    { url = "https://mirrors.aliyun.com/pytorch-wheels/cu121/torch-2.1.0+cu121-cp311-cp311-win_amd64.whl", extra = "gpuw" },
    { url = "https://mirrors.aliyun.com/pytorch-wheels/cu121/torch-2.1.0+cu121-cp311-cp311-linux_x86_64.whl", extra = "gpul" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
