[project]
name = "graphlora"
version = "0.1.0"
description = "Implementation of GraphLoRA: Structure-Aware Contrastive Low-Rank Adaptation for Cross-Graph Transfer Learning"
requires-python = "~=3.11.5"

dependencies = [
    "numpy==1.26.0",
    "pyyaml==6.0.1",
    "setuptools>=68.0.0",
    "packaging>=23.2",
    "torch-geometric==2.4.0",
    "torch==2.1.0; sys_platform == 'darwin'",
    "torch==2.1.0+cu121; sys_platform != 'darwin'",
]

[tool.uv]
find-links = [ "https://mirrors.aliyun.com/pytorch-wheels/cu121" ]
dependency-metadata = [
    { name = "torch", version = "2.1.0+cu121", requires-dist = [ "filelock", "fsspec", "jinja2", "networkx", "sympy", "triton; sys_platform == 'linux'", "typing-extensions"] }
]
